[gd_scene load_steps=17 format=3 uid="uid://bv0w1qjysakw7"]

[ext_resource type="Script" uid="uid://ccerjox5tgets" path="res://Scripts/Assets/Structures/Crafting/basic_crafting_bench_1.gd" id="1_o3e5b"]
[ext_resource type="PackedScene" uid="uid://ct6awo8mfhcc4" path="res://Scenes/Components Scenes/interact_component.tscn" id="2_gecmb"]
[ext_resource type="PackedScene" uid="uid://rj5hrcahpmu7" path="res://Scenes/TestingAssets/ball_test.tscn" id="2_j8vc1"]
[ext_resource type="PackedScene" uid="uid://b4m31vcs1k7re" path="res://Scenes/Components Scenes/inventory_component.tscn" id="3_j8vc1"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_m4mep"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4stcm"]
albedo_color = Color(0.359132, 0.303043, 0.105592, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ghvx2"]
albedo_color = Color(0.359132, 0.303043, 0.105592, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7ycn6"]
albedo_color = Color(0.359132, 0.303043, 0.105592, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6svis"]
albedo_color = Color(0.359132, 0.303043, 0.105592, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8oj15"]
albedo_color = Color(0.359132, 0.303043, 0.105592, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_ghvx2"]
size = Vector3(1, 0.566528, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vdohp"]
albedo_color = Color(0.180005, 0.180005, 0.180005, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_4stcm"]
size = Vector3(1, 0.11673, 0.329834)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0llkb"]
transparency = 1
albedo_color = Color(0.690196, 0.690196, 0.690196, 0.498039)

[sub_resource type="BoxShape3D" id="BoxShape3D_xwujn"]
size = Vector3(0.0636597, 0.0415039, 0.171539)

[sub_resource type="BoxShape3D" id="BoxShape3D_7ycn6"]
size = Vector3(0.0609131, 0.286015, 0.36615)

[node name="BasicCraftingBenchTest1" type="Node3D"]
script = ExtResource("1_o3e5b")
spawn_scene = ExtResource("2_j8vc1")

[node name="BenchCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0395296, 0.81909, 0.566826)
keep_aspect = 0
attributes = SubResource("CameraAttributesPractical_m4mep")
fov = 123.274

[node name="Meshes" type="Node3D" parent="."]

[node name="Benchtop" type="CSGBox3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
size = Vector3(1, 0.066, 0.56)
material = SubResource("StandardMaterial3D_4stcm")

[node name="BenchLeg" type="CSGBox3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.442853, 0.3, 0.223853)
size = Vector3(0.1, 0.6, 0.1)
material = SubResource("StandardMaterial3D_ghvx2")

[node name="BenchLeg2" type="CSGBox3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.443834, 0.3, 0.223853)
size = Vector3(0.1, 0.6, 0.1)
material = SubResource("StandardMaterial3D_7ycn6")

[node name="BenchLeg3" type="CSGBox3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.443834, 0.3, -0.223713)
size = Vector3(0.1, 0.6, 0.1)
material = SubResource("StandardMaterial3D_6svis")

[node name="BenchLeg4" type="CSGBox3D" parent="Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.445668, 0.3, -0.223713)
size = Vector3(0.1, 0.6, 0.1)
material = SubResource("StandardMaterial3D_8oj15")

[node name="Components" type="Node3D" parent="."]

[node name="InteractComponent" parent="Components" instance=ExtResource("2_gecmb")]
visible = false
interact_prompt = "Basic Crafting Bench"

[node name="CollisionShape3D" type="CollisionShape3D" parent="Components/InteractComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.66328, 0)
shape = SubResource("BoxShape3D_ghvx2")

[node name="InventoryComponent" parent="Components" instance=ExtResource("3_j8vc1")]
max_slots = 6

[node name="ReferencePoints" type="Node3D" parent="."]

[node name="PlayerStandingPosition" type="Node3D" parent="ReferencePoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.876437, 0.745585)

[node name="Tools" type="Node3D" parent="."]

[node name="Conveyor" type="Node3D" parent="Tools"]

[node name="ConveyorPlaceholder" type="CSGBox3D" parent="Tools/Conveyor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.637512, 0.0795134)
use_collision = true
collision_layer = 8
size = Vector3(1, 0.0449524, 0.325928)
material = SubResource("StandardMaterial3D_vdohp")

[node name="ConveyorArea" type="Area3D" parent="Tools/Conveyor"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Tools/Conveyor/ConveyorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.674637, 0.0794678)
shape = SubResource("BoxShape3D_4stcm")

[node name="Hopper" type="Node3D" parent="Tools"]

[node name="Meshes" type="Node3D" parent="Tools/Hopper"]

[node name="HopperLeg" type="CSGBox3D" parent="Tools/Hopper/Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.461274, 0.746168, 0.258388)
size = Vector3(0.02, 0.227391, 0.02)

[node name="HopperLeg2" type="CSGBox3D" parent="Tools/Hopper/Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.461274, 0.746168, -0.0971327)
size = Vector3(0.02, 0.227391, 0.02)

[node name="HopperLeg3" type="CSGBox3D" parent="Tools/Hopper/Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.302786, 0.746168, -0.0971327)
size = Vector3(0.02, 0.227391, 0.02)

[node name="HopperLeg4" type="CSGBox3D" parent="Tools/Hopper/Meshes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.302786, 0.746168, 0.258041)
size = Vector3(0.02, 0.227391, 0.02)

[node name="Hopper" type="CSGCombiner3D" parent="Tools/Hopper/Meshes"]

[node name="HopperBody" type="CSGCombiner3D" parent="Tools/Hopper/Meshes/Hopper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.381137, 0.961365, 0.0796457)

[node name="Hopper" type="CSGBox3D" parent="Tools/Hopper/Meshes/Hopper/HopperBody"]
size = Vector3(0.211353, 0.214063, 0.399512)

[node name="Hopper2" type="CSGBox3D" parent="Tools/Hopper/Meshes/Hopper/HopperBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00150222, 0.0187622, 0.0151123)
operation = 2
size = Vector3(0.146785, 0.208423, 0.388623)

[node name="Hopper3" type="CSGBox3D" parent="Tools/Hopper/Meshes/Hopper/HopperBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000930369, -0.104864, 0.021222)
operation = 2
size = Vector3(0.0817906, 0.0598389, 0.319812)

[node name="HopperGlass" type="CSGBox3D" parent="Tools/Hopper/Meshes/Hopper/HopperBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000938416, 0.0065918, 0.192202)
size = Vector3(0.143936, 0.184082, 0.00793457)
material = SubResource("StandardMaterial3D_0llkb")

[node name="HopperNozzle" type="CSGCombiner3D" parent="Tools/Hopper/Meshes/Hopper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.381137, 1.30185, 0.0796457)

[node name="Hopper" type="CSGBox3D" parent="Tools/Hopper/Meshes/Hopper/HopperNozzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00405139, -0.502387, 0)
size = Vector3(0.0584171, 0.0257446, 0.399512)

[node name="Hopper2" type="CSGBox3D" parent="Tools/Hopper/Meshes/Hopper/HopperNozzle"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00273609, -0.510597, 0.00188503)
operation = 2
size = Vector3(0.0491287, 0.0161865, 0.326453)

[node name="HopperChute" type="CSGCombiner3D" parent="Tools/Hopper/Meshes/Hopper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.886234, 0.771889, 0.0796457)

[node name="CSGPolygon3D" type="CSGPolygon3D" parent="Tools/Hopper/Meshes/Hopper/HopperChute"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0440139, -0.725331, 0.200459)
polygon = PackedVector2Array(0.423383, 0.764556, 0.355603, 0.808002, 0.566113, 0.808002, 0.491348, 0.764077)
depth = 0.4

[node name="HopperSpawnArea" type="Area3D" parent="Tools/Hopper"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.38664, 0.774218, 0.0828962)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Tools/Hopper/HopperSpawnArea"]
shape = SubResource("BoxShape3D_xwujn")

[node name="FinishBin" type="Node3D" parent="Tools"]

[node name="Meshes" type="Node3D" parent="Tools/FinishBin"]

[node name="Bin" type="CSGCombiner3D" parent="Tools/FinishBin/Meshes"]

[node name="BinBody" type="CSGBox3D" parent="Tools/FinishBin/Meshes/Bin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.612742, 0.696813, 0.0748183)
size = Vector3(0.217255, 0.354385, 0.399437)

[node name="BinBody4" type="CSGBox3D" parent="Tools/FinishBin/Meshes/Bin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.651934, 0.281433, 0.0786053)
size = Vector3(0.295639, 0.553684, 0.429449)

[node name="BinBody3" type="CSGBox3D" parent="Tools/FinishBin/Meshes/Bin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.443144, 0.75992, 0.076738)
size = Vector3(0.214169, 0.245979, 0.424139)

[node name="BinBody2" type="CSGBox3D" parent="Tools/FinishBin/Meshes/Bin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.38995, 0.745287, 0.0769693)
operation = 2
size = Vector3(0.251518, 0.21669, 0.349862)

[node name="FinishBinArea" type="Area3D" parent="Tools/FinishBin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.318782, 0.651771, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Tools/FinishBin/FinishBinArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.134806, 0.0647053, 0.078949)
shape = SubResource("BoxShape3D_7ycn6")

[node name="NodeHolders" type="Node" parent="."]

[node name="TimersHolder" type="Node" parent="NodeHolders"]

[node name="SpawnerTimer" type="Timer" parent="NodeHolders/TimersHolder"]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="QuitTimer" type="Timer" parent="NodeHolders/TimersHolder"]
process_callback = 0
wait_time = 0.5
one_shot = true
ignore_time_scale = true

[node name="ActionNumTimer" type="Timer" parent="NodeHolders/TimersHolder"]
process_callback = 0
wait_time = 0.5
one_shot = true
ignore_time_scale = true

[node name="SpawnablesHolder" type="Node" parent="NodeHolders"]
